--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     height: 38px;
     /* width: 100px; */
     background-color: var(--main_color);
+    border-radius: 20px 0 0 20px;
 }
 
 .text{
