--- a/style.css
+++ b/style.css
@@ -16,6 +16,61 @@
     top: 30px;
 }
 
+#octopus_head_clip_container{
+    position: relative;
+    height: var(--height);
+    width: calc(var(--height) / 2);
+    /* background-color: aqua; */
+    border-radius: 0 var(--height) var(--height) 0;
+    left: 650px;
+    /* top: 30px; */
+    bottom: 528px;
+    overflow: hidden;
+}
+
+#eye1{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+    z-index: 1;
+    top: 50px;
+    left: 50px;
+}
+
+#eye2{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: black;
+    border-radius: 50%;
+    z-index: 1;
+    top: 60px;
+    left: 80px;
+}
+
+#mouthclip{
+    position: absolute;
+    background-color: white;
+    height: 420px;
+    width: 420px;
+    border-radius: 50%;
+    bottom: 100px;
+    
+}
+
+#mouth{
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background-color: var(--main_color);
+    border-radius: 50%;
+    bottom: 100px;
+}
+
+
+
 #buffer_rect{
     background-color: var(--main_color);
     position: absolute;
