--- a/style.css
+++ b/style.css
@@ -6,19 +6,16 @@
 }
 
 
-#octopus_head {
+.octopus{
+    /* display: flex; */
+    /* flex-direction: column; */
     position: relative;
     height: var(--height);
     width: calc(calc(var(--height) / 2) + var(--buffer));
     border-radius: 0 558px 558px 0;
     background-color: var(--main_color);
-    left: 650px;
-    top: 30px;
-}
-
-body{
-    height: 0;
-    /* margin-top: 300px; */
+    left: 350px;
+    /* top: 30px; */
 }
 
 #octopus_head_clip_container{
@@ -75,7 +72,7 @@ body{
     bottom: 100px;
 }
 
-.face{
+.mouth{
     position: relative;
     /* left: 10px; */
     /* right: 100px; */
@@ -85,10 +82,23 @@ body{
     /* top: 110px; */
 }
 
+.octopus_body{
+    /* display: flex; */
+}
+
+ul{
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: flex-end; */
+}
+
 .leg{
-    position: absolute;
-    right: calc(var(--height)/1.35);
-    height: 38px;
+    position: relative;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: right; */
+    /* right: calc(var(--height)/1.35); */
+    /* height: 38px; */
     background-color: var(--main_color);
     border-radius: var(--height) 0 0 var(--height);
     list-style-type: none;
@@ -97,8 +107,10 @@ body{
     font-family: Arial, sans-serif;
     font-weight: bold;
     text-indent: 20px;
+    right: 300px;
+    /* float: right;
+    clear: both; */
 }
-
 
 .future{
     background-color: var(--future_color);
@@ -154,127 +166,7 @@ p{
     margin-bottom: 40px;
 } */
 
-
-
-#english_language{
-    /* top: 0px; */
-}
-
-
-
-#boldness{
-    top: 40px;
-    /* width: calc(20% + 10%); */
-}
-#boldness.future{
-    /* width: calc(40% + 10%); */
-}
-
-
-
-#python{
-    top: 80px;
-}
-#python.future{
-    /* width: calc(50% + 10%); */
-}
-
-
-
-#HTML{
-    top: 120px;
-    /* width: calc(30% + 10%); */
-}
-#HTML.future{
-    /* width: calc(40% + 10%); */
-}
-
-
-
-#CSS{
-    top: 160px;
-    /* width: calc(20% + 10%); */
-}
-#CSS.future{
-    /* width: calc(40% + 10%); */
-}
-
-
-
-#blender{
-    top: 200px;
-    /* width: calc(60% + 10%); */
-}
-#blender.future{
-    /* width: calc(70% + 10%); */
-}
-
-
-
-#rubiks_cube{
-    top: 240px;
-    /* width: calc(70% + 10%); */
-}
-#rubiks_cube.future{
-    /* width: calc(80% + 10%); */
-}
-
-
-
-#printing_3d{
-    top: 280px;
-    /* width: calc(40% + 10%); */
-}
-#printing_3d.future{
-    /* width: calc(60% + 10%); */
-}
-
-
-
-#food{
-    top: 320px;
-    /* width: 500px; */
-}
-
-
-
-#piano{
-    top: 360px;
-    /* width: 250px; */
-}
-#piano.future{
-    /* width: 300px; */
-}
-
-
-
-#rubyonrails{
-    top: 400px;
-    /* width: 25px; */
-}
-#rubyonrails.future{
-    /* width: 200px; */
-}
-
-
-
-.empty{
-    width: 25px;
-}
-
-#empty1{
-    top: 440px;
-}
-
-#empty2{
-    top: 480px;
-}
-
-#empty3{
-    top: 520px;
-}
-
-.now{
+/* .now{
     display: inline;
     position: absolute;
     top: calc(var(--height) + 20px);
@@ -282,7 +174,7 @@ p{
     width: 50px;
     height: 25px;
     background-color: var(--main_color);
-}
+} */
 
 .inayear{
     right: 440px;
